// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteContainer should match the snapshot 1`] = `
<div
  className="NoteContainer"
>
  <div
    className="NoteContainer--div"
  >
    <Link
      className="NoteContainer--link"
      replace={false}
      to="/new-note"
    >
      <img
        alt="new note icon"
        className="NoteContainer--icon--new-note"
        src="newnoteicon.svg"
      />
      <span
        className="NoteContainer--span"
      >
        New Note
      </span>
    </Link>
  </div>
  <Masonry
    breakpointCols={
      Object {
        "1040": 3,
        "1296": 4,
        "1552": 5,
        "528": 1,
        "784": 2,
        "default": 6,
      }
    }
    className="NoteContainer--cards"
    columnClassName="NoteContainer--cards-masonry-cols"
  >
    <NoteCard
      id="fah"
      key="fah"
      listItems={
        Array [
          Object {
            "description": "gather ingredients",
            "id": "ley",
            "isComplete": false,
          },
          Object {
            "description": "preheat oven",
            "id": "mei",
            "isComplete": false,
          },
        ]
      }
      title="Make dinner"
    />
    <NoteCard
      id="bah"
      key="bah"
      listItems={
        Array [
          Object {
            "description": "Stop by King Soopers",
            "id": "rey",
            "isComplete": false,
          },
          Object {
            "description": "Stop by Sprouts",
            "id": "moo",
            "isComplete": false,
          },
        ]
      }
      title="Grocery shopping"
    />
    <NoteCard
      id="pdo"
      key="pdo"
      listItems={
        Array [
          Object {
            "description": "Setup user account",
            "id": "cat",
            "isComplete": false,
          },
        ]
      }
      title="Start portfolio"
    />
    <NoteCard
      id="ijf"
      key="ijf"
      listItems={
        Array [
          Object {
            "description": "read through lesson",
            "id": "asg",
            "isComplete": false,
          },
          Object {
            "description": "follow along with tutorial",
            "id": "rhf",
            "isComplete": false,
          },
        ]
      }
      title="Learn Redux"
    />
  </Masonry>
</div>
`;

exports[`NoteContainer should match the snapshot when isDisabled is true 1`] = `
<div
  className="NoteContainer--disabled"
>
  <div
    className="NoteContainer--div"
  >
    <Link
      className="NoteContainer--link"
      replace={false}
      to="/new-note"
    >
      <img
        alt="new note icon"
        className="NoteContainer--icon--new-note"
        src="newnoteicon.svg"
      />
      <span
        className="NoteContainer--span"
      >
        New Note
      </span>
    </Link>
  </div>
  <Masonry
    breakpointCols={
      Object {
        "1040": 3,
        "1296": 4,
        "1552": 5,
        "528": 1,
        "784": 2,
        "default": 6,
      }
    }
    className="NoteContainer--cards"
    columnClassName="NoteContainer--cards-masonry-cols"
  >
    <NoteCard
      id="fah"
      key="fah"
      listItems={
        Array [
          Object {
            "description": "gather ingredients",
            "id": "ley",
            "isComplete": false,
          },
          Object {
            "description": "preheat oven",
            "id": "mei",
            "isComplete": false,
          },
        ]
      }
      title="Make dinner"
    />
    <NoteCard
      id="bah"
      key="bah"
      listItems={
        Array [
          Object {
            "description": "Stop by King Soopers",
            "id": "rey",
            "isComplete": false,
          },
          Object {
            "description": "Stop by Sprouts",
            "id": "moo",
            "isComplete": false,
          },
        ]
      }
      title="Grocery shopping"
    />
    <NoteCard
      id="pdo"
      key="pdo"
      listItems={
        Array [
          Object {
            "description": "Setup user account",
            "id": "cat",
            "isComplete": false,
          },
        ]
      }
      title="Start portfolio"
    />
    <NoteCard
      id="ijf"
      key="ijf"
      listItems={
        Array [
          Object {
            "description": "read through lesson",
            "id": "asg",
            "isComplete": false,
          },
          Object {
            "description": "follow along with tutorial",
            "id": "rhf",
            "isComplete": false,
          },
        ]
      }
      title="Learn Redux"
    />
  </Masonry>
</div>
`;

exports[`NoteContainer should match the snapshot when isLoading is true 1`] = `
<div
  className="NoteContainer"
>
  <div
    className="NoteContainer--div"
  >
    <Link
      className="NoteContainer--link"
      replace={false}
      to="/new-note"
    >
      <img
        alt="new note icon"
        className="NoteContainer--icon--new-note"
        src="newnoteicon.svg"
      />
      <span
        className="NoteContainer--span"
      >
        New Note
      </span>
    </Link>
  </div>
  <Loader />
</div>
`;
